* Added simple query adding (closes #3)

--- a/VSTrac/TracExplorer.resx
+++ b/VSTrac/TracExplorer.resx
@@ -129,78 +129,78 @@
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABq
         EgAAAk1TRnQBSQFMAgEBBAEAAQkBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AMgABewFiAU4B/wF4
-        AV4BSgH/AXQBWwFGAf8BcQFXAUMB/wFuAVQBQAH/AWwBUgE8Af8BagFPAToB/wFpAU4BOQH/AWkBTgE5
-        Af8kAAKSAdYB/wGMAY0B1AH/sAABgAFnAVQB/wHFAb0BtgH/AcgBqAGXAf8BxwGmAZUB/wHHAaUBlAH/
-        AcYBpAGSAf8BxgGjAZIB/wHGAaIBkAH/AWkBTgE5Af8kAAIwAa4B/wIpAawB/wJ4AckB/wLXAfAB/2AA
-        AbcBogGTAf8BaQFPATsB/wFpAU8BOwH/AWkBTwE7Af8BaQFPATsB/wFpAU8BOwH/AWkBTwE7Af8BaQFP
-        ATsB/wFpAU8BOwH/AWkBTwE7Af8BaQFPATsB/wFpAU8BOwH/GAABgQFuAVsF/wHzAdcByQH/AfIB1QHH
-        Af8B8gHUAcUB/wE0AcwBCwH/ATQBmwELAf8BxwGkAZQB/wFrAVEBPQH/HAACvQHmAf8EAAJpAcQB/wIp
-        AawB/wIpAawB/wIwAa4B/wJAAbQB/wJKAbgB/wKEAdAB/wwAAXsBhAGPAf8BcgGAAYUB/wFmAXMBfQH/
-        AVcBYwFsAf8BSAFSAVoB/wE3AUABRwH/ASkBMAE2Af8BHAEiAScB/wEUARkBHgH/ARQBGQEeAf8BFAEZ
-        AR4B/wEUARkBHgH/ARQBGQEeAf8BFAEZAR4B/wEUARkBHgH/DAABtwGiAZMB/wH3AeUB3AH/AbcBogGT
+        AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AMgABfAFjAU8B/wF5
+        AV8BSwH/AXUBXAFHAf8BcgFYAUQB/wFvAVUBQQH/AW0BUwE9Af8BawFQATsB/wFqAU8BOgH/AWoBTwE6
+        Af8kAAKSAdYB/wGMAY0B1AH/sAABgQFoAVUB/wHFAb0BtgH/AcgBqAGXAf8BxwGmAZUB/wHHAaUBlAH/
+        AcYBpAGSAf8BxgGjAZIB/wHGAaIBkAH/AWoBTwE6Af8kAAIxAa4B/wIqAawB/wJ5AckB/wLXAfAB/2AA
+        AbcBogGTAf8BagFQATwB/wFqAVABPAH/AWoBUAE8Af8BagFQATwB/wFqAVABPAH/AWoBUAE8Af8BagFQ
+        ATwB/wFqAVABPAH/AWoBUAE8Af8BagFQATwB/wFqAVABPAH/GAABgQFvAVwF/wHzAdcByQH/AfIB1QHH
+        Af8B8gHUAcUB/wE1AcwBDAH/ATUBmwEMAf8BxwGkAZQB/wFsAVIBPgH/HAACvQHmAf8EAAJqAcQB/wIq
+        AawB/wIqAawB/wIxAa4B/wJBAbQB/wJLAbgB/wKEAdAB/wwAAXwBhAGPAf8BcwGBAYUB/wFnAXQBfgH/
+        AVgBZAFtAf8BSQFTAVsB/wE4AUEBSAH/ASoBMQE3Af8BHQEjASgB/wEVARoBHwH/ARUBGgEfAf8BFQEa
+        AR8B/wEVARoBHwH/ARUBGgEfAf8BFQEaAR8B/wEVARoBHwH/DAABtwGiAZMB/wH3AeUB3AH/AbcBogGT
         Af8BtwGiAZMB/wG3AaIBkwH/AbcBogGTAf8BtwGiAZMB/wG3AaIBkwH/AbcBogGTAf8BtwGiAZMB/wG3
-        AaIBkwH/AWkBTwE7Af8YAAGGAXMBYQX/AfQB2gHOAf8B9AHZAcwB/wHzAdcBygH/ARIB/wELAf8BNAHM
-        AQsB/wHIAagBmAH/AW8BVAFAAf8YAAJiAcEB/wIpAawB/wKBAc4B/wQAAkABtAH/AikBrAH/AikBrAH/
-        AikBrAH/AiQBqgH/AjoBsgH/DAABfQGHAZIB/wGiAd8B8AH/AXYBzQHqAf8BTwG4AeIB/wE9Aa4B2wH/
-        ATMBqQHZAf8BLAGhAdIB/wEnAZgBxwH/ASYBjgG8Af8BJAGDAa4B/wEfAYEBqwH/ARsBgQGpAf8BIQF9
-        AZ8B/wElAXgBlgH/ARwBIgEnAf8MAAG3AaIBkwH/AfkB6QHiAf8B+AHmAd0B/wH3AeIB2AH/AfUB3gHT
-        Af8B9AHbAc4B/wHzAdcBygH/AfIB1AHFAf8B8QHQAcEB/wHwAc0BvAH/AbcBogGTAf8BaQFPATsB/xgA
-        AYwBegFoBf8B9QHeAdMB/wH1Ad0B0QH/AfQB2wHPAf8B9AHaAc0B/wHzAdgBzAH/AcgBqwGbAf8BdAFZ
-        AUUB/xQAAqUB3QH/AikBrAH/AikBrAH/AlMBvAH/BAACYgHBAf8CKQGsAf8CKQGsAf8CKQGsAf8CWQG+
-        Af8CtQHjAf8MAAGAAYoBlQH/AaoB6AH2Af8BlQHlAfwB/wGEAd8B+wH/AXsB1gH6Af8BcAHQAfcB/wFj
-        AcYB9AH/AVYBvgHwAf8BRwG0AewB/wE7AaoB6AH/ATEBpAHmAf8BJgGaAd8B/wEcAZAB1wH/ASEBfQGf
-        Af8BJgEtATMB/wwAAbcBogGTAf8B+QHuAegB/wH4AeoB4wH/AfgB5gHeAf8B9wHjAdkB/wH1Ad8B1QH/
-        AfUB2wHQAf8B8wHYAcsB/wHyAdUBxgH/AfEB0QHCAf8BtwGiAZMB/wFpAU8BOwH/GAABkgGAAW8F/wH2
-        AeEB2AH/AfYB4AHWAf8B9QHfAdQB/wH1Ad4B0gH/AfUB3AHRAf8ByQGuAaAB/wF4AV4BSgH/FAABqwGs
-        Ad4B/wIkAaoB/wIwAa4B/wK9AeYB/wQAApsB2QH/AjABrgH/AjABrgH/AYwBjQHUAf8EAAKBAc4B/wGM
-        AY0B1AH/CAABgQGOAZgB/wGwAeoB9gH/AZ8B6QH7Af8BkgHkAfwB/wGBAd0B+wH/AXsB1gH6Af8BbgHO
-        AfcB/wFjAcYB9AH/AVMBvAHwAf8BRwG0AewB/wE7AaoB6AH/ATABowHmAf8BIwGWAdwB/wEbAYEBqQH/
-        ATMBOgFBAf8MAAG3AaIBkwH/AfsB8gHtAf8B6gGaAXcB/wHqAY8BZgH/AeoBgwFVAf8B5wF+AUYB/wHe
-        AXQBPAH/AdEBbAE1Af8BwQFjATAB/wHzAdUBxwH/AbcBogGTAf8BaQFPATsB/xgAAZgBgQF2Bf8B9wHl
-        AdwB/wH3AeQB2gH/AfYB4gHZAf8B9gHhAdcB/wH2AeAB1QH/AcoBsAGjAf8BfQFjAVAB/xQAAc4BzwHs
-        Af8CaQHEAf8CtQHjAf8MAALJAesB/wLHAeoB/wQAApIB1gH/AikBrAH/AikBrAH/ArUB4wH/BAABgQGR
-        AZwB/wG2Ae0B+AH/AaoB7AH7Af8BmwHoAfsB/wGPAeMB/AH/AYEB3QH7Af8BdwHVAfkB/wFuAc4B9wH/
-        AWEBxQH0Af8BUwG8AfAB/wFDAbIB7AH/ATgBqQHoAf8BKgGeAeIB/wEWAYIBtAH/AUEBSQFRAf8MAAG3
+        AaIBkwH/AWoBUAE8Af8YAAGGAXQBYgX/AfQB2gHOAf8B9AHZAcwB/wHzAdcBygH/ARMB/wEMAf8BNQHM
+        AQwB/wHIAagBmAH/AXABVQFBAf8YAAJjAcEB/wIqAawB/wKBAc4B/wQAAkEBtAH/AioBrAH/AioBrAH/
+        AioBrAH/AiUBqgH/AjsBsgH/DAABfgGHAZIB/wGiAd8B8AH/AXcBzQHqAf8BUAG4AeIB/wE+Aa4B2wH/
+        ATQBqQHZAf8BLQGhAdIB/wEoAZgBxwH/AScBjgG8Af8BJQGDAa4B/wEgAYEBqwH/ARwBgQGpAf8BIgF+
+        AZ8B/wEmAXkBlgH/AR0BIwEoAf8MAAG3AaIBkwH/AfkB6QHiAf8B+AHmAd0B/wH3AeIB2AH/AfUB3gHT
+        Af8B9AHbAc4B/wHzAdcBygH/AfIB1AHFAf8B8QHQAcEB/wHwAc0BvAH/AbcBogGTAf8BagFQATwB/xgA
+        AYwBewFpBf8B9QHeAdMB/wH1Ad0B0QH/AfQB2wHPAf8B9AHaAc0B/wHzAdgBzAH/AcgBqwGbAf8BdQFa
+        AUYB/xQAAqUB3QH/AioBrAH/AioBrAH/AlQBvAH/BAACYwHBAf8CKgGsAf8CKgGsAf8CKgGsAf8CWgG+
+        Af8CtQHjAf8MAAGBAYoBlQH/AaoB6AH2Af8BlQHlAfwB/wGEAd8B+wH/AXwB1gH6Af8BcQHQAfcB/wFk
+        AcYB9AH/AVcBvgHwAf8BSAG0AewB/wE8AaoB6AH/ATIBpAHmAf8BJwGaAd8B/wEdAZAB1wH/ASIBfgGf
+        Af8BJwEuATQB/wwAAbcBogGTAf8B+QHuAegB/wH4AeoB4wH/AfgB5gHeAf8B9wHjAdkB/wH1Ad8B1QH/
+        AfUB2wHQAf8B8wHYAcsB/wHyAdUBxgH/AfEB0QHCAf8BtwGiAZMB/wFqAVABPAH/GAABkgGBAXAF/wH2
+        AeEB2AH/AfYB4AHWAf8B9QHfAdQB/wH1Ad4B0gH/AfUB3AHRAf8ByQGuAaAB/wF5AV8BSwH/FAABqwGs
+        Ad4B/wIlAaoB/wIxAa4B/wK9AeYB/wQAApsB2QH/AjEBrgH/AjEBrgH/AYwBjQHUAf8EAAKBAc4B/wGM
+        AY0B1AH/CAABgQGOAZgB/wGwAeoB9gH/AZ8B6QH7Af8BkgHkAfwB/wGBAd0B+wH/AXwB1gH6Af8BbwHO
+        AfcB/wFkAcYB9AH/AVQBvAHwAf8BSAG0AewB/wE8AaoB6AH/ATEBowHmAf8BJAGWAdwB/wEcAYEBqQH/
+        ATQBOwFCAf8MAAG3AaIBkwH/AfsB8gHtAf8B6gGaAXgB/wHqAY8BZwH/AeoBgwFWAf8B5wF/AUcB/wHe
+        AXUBPQH/AdEBbQE2Af8BwQFkATEB/wHzAdUBxwH/AbcBogGTAf8BagFQATwB/xgAAZgBgQF3Bf8B9wHl
+        AdwB/wH3AeQB2gH/AfYB4gHZAf8B9gHhAdcB/wH2AeAB1QH/AcoBsAGjAf8BfgFkAVEB/xQAAc4BzwHs
+        Af8CagHEAf8CtQHjAf8MAALJAesB/wLHAeoB/wQAApIB1gH/AioBrAH/AioBrAH/ArUB4wH/BAABgQGR
+        AZwB/wG2Ae0B+AH/AaoB7AH7Af8BmwHoAfsB/wGPAeMB/AH/AYEB3QH7Af8BeAHVAfkB/wFvAc4B9wH/
+        AWIBxQH0Af8BVAG8AfAB/wFEAbIB7AH/ATkBqQHoAf8BKwGeAeIB/wEXAYIBtAH/AUIBSgFSAf8MAAG3
         AaIBkwH/AfwB9gHzAf8B+wHyAe4B/wH7Ae8B6gH/AfkB6wHmAf8B+QHoAeEB/wH3AeUB2wH/AfYB4QHX
-        Af8B9AHeAdMB/wHzAdoBzQH/AbcBogGTAf8BaQFPATsB/xgAAZ4BhwF9Gf8B8wHvAewB/wGBAWkBVgH/
-        EAABcAFxAcUB/wFwAXEBxQH/BAABjAGNAdQB/wI6AbIB/wJTAbwB/wgAAt0B8gH/BAAChAHQAf8CKQGs
-        Af8CKQGsAf8CaQHEAf8EAAGDAZUBnwH/Ab4B8AH5Af8BqwHwAfcB/wGlAewB+wH/AZgB5wH7Af8BiQHh
-        AfwB/wGBAd0B+wH/AXcB1QH5Af8BawHNAfcB/wFeAcQB8wH/AVEBuwHwAf8BQwGyAewB/wEyAaQB4wH/
-        ARIBigG/Af8BTwFZAWIB/wwAAboBpQGWAf8B/QH5AfYB/wHqAZkBeAH/AeoBjwFnAf8B6gGDAVUB/wHn
-        AX4BRgH/Ad4BdQE8Af8B0gFsATUB/wHBAWMBMQH/AfUB3wHTAf8BtwGiAZMB/wFpAU8BOwH/GAABpAGO
-        AYEB/wHMAboBrQH/AbcBogGTAf8BrwGaAYsB/wGnAZEBgQH/AZ8BiQF/Af8BmAGBAXYB/wGRAYABbwH/
-        AYEBbwFcAf8QAAGrAawB3gH/AtcB8AH/AngByQH/AikBrAH/AikBrAH/AkoBuAH/BAACgQHOAf8CMAGu
-        Af8BqwGsAd4B/wLdAfIB/wIwAa4B/wIpAawB/wGrAawB3gH/BAABhgGZAaMB/wG+AfAB+QH/AbYB7QH4
-        Af8BsAHuAfoB/wGkAesB+gH/AZUB5gH7Af8BiQHhAfwB/wGBAdwB/AH/AXcB1QH5Af8BawHNAfcB/wFe
-        AcQB8wH/AU8BuQHvAf8BOwGpAecB/wESAY8BxwH/AV0BaQFxAf8MAAG+AakBmgH/Af4B/AH7Af8B/QH5
+        Af8B9AHeAdMB/wHzAdoBzQH/AbcBogGTAf8BagFQATwB/xgAAZ4BhwF+Gf8B8wHvAewB/wGBAWoBVwH/
+        EAABcQFyAcUB/wFxAXIBxQH/BAABjAGNAdQB/wI7AbIB/wJUAbwB/wgAAt0B8gH/BAAChAHQAf8CKgGs
+        Af8CKgGsAf8CagHEAf8EAAGDAZUBnwH/Ab4B8AH5Af8BqwHwAfcB/wGlAewB+wH/AZgB5wH7Af8BiQHh
+        AfwB/wGBAd0B+wH/AXgB1QH5Af8BbAHNAfcB/wFfAcQB8wH/AVIBuwHwAf8BRAGyAewB/wEzAaQB4wH/
+        ARMBigG/Af8BUAFaAWMB/wwAAboBpQGWAf8B/QH5AfYB/wHqAZkBeQH/AeoBjwFoAf8B6gGDAVYB/wHn
+        AX8BRwH/Ad4BdgE9Af8B0gFtATYB/wHBAWQBMgH/AfUB3wHTAf8BtwGiAZMB/wFqAVABPAH/GAABpAGO
+        AYEB/wHMAboBrQH/AbcBogGTAf8BrwGaAYsB/wGnAZEBgQH/AZ8BiQGAAf8BmAGBAXcB/wGRAYEBcAH/
+        AYEBcAFdAf8QAAGrAawB3gH/AtcB8AH/AnkByQH/AioBrAH/AioBrAH/AksBuAH/BAACgQHOAf8CMQGu
+        Af8BqwGsAd4B/wLdAfIB/wIxAa4B/wIqAawB/wGrAawB3gH/BAABhgGZAaMB/wG+AfAB+QH/AbYB7QH4
+        Af8BsAHuAfoB/wGkAesB+gH/AZUB5gH7Af8BiQHhAfwB/wGBAdwB/AH/AXgB1QH5Af8BbAHNAfcB/wFf
+        AcQB8wH/AVABuQHvAf8BPAGpAecB/wETAY8BxwH/AV4BagFyAf8MAAG+AakBmgH/Af4B/AH7Af8B/QH5
         AfgB/wH9AfcB9AH/AfwB9AHwAf8B+wHxAe0B/wH6Ae4B6AH/AfgB6gHkAf8B9wHnAd8B/wH2AeIB2gH/
-        AbcBogGTAf8BaQFPATsB/xgAAakBlAGFBf8B+wHwAesB/wH6Ae8B6QH/AfoB7QHoAf8B+QHsAeYB/wH5
-        AesB5AH/Ac0BuQGuAf8BhwF1AWMB/xQAAt0B8gH/AjABrgH/AikBrAH/AikBrAH/ArUB4wH/AuQB9QH/
-        AjABrgH/AiQBqgH/AkoBuAH/BAACpQHdAf8CpQHdAf8IAAGJAZwBpgH/Ab4B8AH5Af8BtgHtAfgB/wG2
-        Ae0B+AH/AasB8AH3Af8BogHsAfoB/wGVAeYB+wH/AYkB4QH8Af8BgQHcAfwB/wF1AdMB+gH/AWkBzAH3
-        Af8BWwHDAfMB/wFPAbkB7wH/AR8BmQHPAf8BaQF2AYAB/wwAAcMBrgGeAf8D/gH/AeoBmgF3Af8B6gGP
-        AWYB/wHqAYQBVQH/AeYBfgFFAf8B3wF1ATwB/wHSAWwBNgH/AcEBYwEwAf8B+AHoAd8B/wG3AaIBkwH/
-        AWkBTwE7Af8YAAGwAZsBjBn/AfMB7wHsAf8BjgF8AWoB/xgAAkABtAH/AiQBqgH/AkABtAH/BAABqwGs
-        Ad4B/wIpAawB/wIpAawB/wIwAa4B/wQAAoQB0AH/ApsB2QH/CAABiwGgAagB/wG+AfAB+QH/Ab4B8AH5
+        AbcBogGTAf8BagFQATwB/xgAAakBlAGFBf8B+wHwAesB/wH6Ae8B6QH/AfoB7QHoAf8B+QHsAeYB/wH5
+        AesB5AH/Ac0BuQGuAf8BhwF2AWQB/xQAAt0B8gH/AjEBrgH/AioBrAH/AioBrAH/ArUB4wH/AuQB9QH/
+        AjEBrgH/AiUBqgH/AksBuAH/BAACpQHdAf8CpQHdAf8IAAGJAZwBpgH/Ab4B8AH5Af8BtgHtAfgB/wG2
+        Ae0B+AH/AasB8AH3Af8BogHsAfoB/wGVAeYB+wH/AYkB4QH8Af8BgQHcAfwB/wF2AdMB+gH/AWoBzAH3
+        Af8BXAHDAfMB/wFQAbkB7wH/ASABmQHPAf8BagF3AYEB/wwAAcMBrgGeAf8D/gH/AeoBmgF4Af8B6gGP
+        AWcB/wHqAYQBVgH/AeYBfwFGAf8B3wF2AT0B/wHSAW0BNwH/AcEBZAExAf8B+AHoAd8B/wG3AaIBkwH/
+        AWoBUAE8Af8YAAGwAZsBjBn/AfMB7wHsAf8BjgF9AWsB/xgAAkEBtAH/AiUBqgH/AkEBtAH/BAABqwGs
+        Ad4B/wIqAawB/wIqAawB/wIxAa4B/wQAAoQB0AH/ApsB2QH/CAABiwGgAagB/wG+AfAB+QH/Ab4B8AH5
         Af8BvgHwAfkB/wG+AfAB+QH/AbQB8gH4Af8BqgHsAfsB/wGgAekB+wH/AZUB5QH8Af8BigHfAfwB/wGB
-        AdgB+wH/AXoB0gH4Af8BbgHKAfQB/wFjAcAB8QH/AWkBdgGAAf8MAAHIAbIBowr/Af0B/AH/Af0B+wH5
-        Af8B/QH5AfYB/wH8AfUB8gH/AfsB8gHuAf8B+wHvAeoB/wH5AewB5gH/AbcBogGTAf8BaQFPATsB/xgA
+        AdgB+wH/AXsB0gH4Af8BbwHKAfQB/wFkAcAB8QH/AWoBdwGBAf8MAAHIAbIBowr/Af0B/AH/Af0B+wH5
+        Af8B/QH5AfYB/wH8AfUB8gH/AfsB8gHuAf8B+wHvAeoB/wH5AewB5gH/AbcBogGTAf8BagFQATwB/xgA
         AbUBoQGSAf8BzAG6Aa0B/wHEAbABogH/Ab0BqQGbAf8BtgGiAZIB/wGuAZkBigH/AaYBkQGBAf8BnwGI
-        AX4B/wGUAYEBcAH/GAABqwGsAd4B/wJpAcQB/wLJAesB/wQAAqUB3QH/AikBrAH/AikBrAH/AkABtAH/
+        AX8B/wGUAYEBcQH/GAABqwGsAd4B/wJqAcQB/wLJAesB/wQAAqUB3QH/AioBrAH/AioBrAH/AkEBtAH/
         BAACtQHjAf8BzgHPAewB/wgAAY0BoQGqAf8BjQGhAaoB/wGNAaEBqgH/AY0BoQGqAf8BjQGhAaoB/wGL
         AZ8BqAH/AYkBnAGmAf8BiQGbAaYB/wGHAZoBpAH/AYYBmQGjAf8BhAGWAaAB/wGEAZYBoAH/AYMBlQGg
-        Af8BgwGVAaAB/wF7AYQBjwH/DAABzAG2AacF/wHqAZoBeAH/AeoBjgFmAf8B6gGDAVUB/wHmAX4BRgH/
-        Ad4BdAE8Af8B/AH2AfMB/wH7AfQB7wH/AbcBogGTAf8BtwGiAZMB/wFqAVABPAH/GAABuwGmAZcF/wH7
-        AfIB7gH/AfkB6wHlAf8B+AHlAdwB/wH1Ad8B1AH/AfMB1wHLAf8B1QG0AaQB/wGaAYMBeAH/GAACQAG0
-        Af8C3QHyAf8MAAJpAcQB/wJKAbgB/wK9AeYB/xQAAY8BpAGsAf8BsgHkAewB/wG2Ae0B+AH/AbYB7QH4
+        Af8BgwGVAaAB/wF8AYQBjwH/DAABzAG2AacF/wHqAZoBeQH/AeoBjgFnAf8B6gGDAVYB/wHmAX8BRwH/
+        Ad4BdQE9Af8B/AH2AfMB/wH7AfQB7wH/AbcBogGTAf8BtwGiAZMB/wFrAVEBPQH/GAABuwGmAZcF/wH7
+        AfIB7gH/AfkB6wHlAf8B+AHlAdwB/wH1Ad8B1AH/AfMB1wHLAf8B1QG0AaQB/wGaAYMBeQH/GAACQQG0
+        Af8C3QHyAf8MAAJqAcQB/wJLAbgB/wK9AeYB/xQAAY8BpAGsAf8BsgHkAewB/wG2Ae0B+AH/AbYB7QH4
         Af8BqQHsAfYB/wGSAeEB8wH/AY0BoQGqAf8B1QHcAeAB/ygAAdEBuwGrEv8B/gH9Af8B/gL7Af8B/QH5
-        AfgB/wG3AaIBkwH/AWoBUAE8Af8BagFQATwB/wFqAVABPAH/GAABwwGvAaIB/wP8Ff8B8wHvAewB/wGm
+        AfgB/wG3AaIBkwH/AWsBUQE9Af8BawFRAT0B/wFrAVEBPQH/GAABwwGvAaIB/wP8Ff8B8wHvAewB/wGm
         AZABgQH/GAACvQHmAf8QAAK9AeYB/wHOAc8B7AH/GAAB2gHeAeEB/wGPAaQBrAH/AY8BpAGsAf8BjwGk
         AawB/wGPAaQBrAH/AY8BpAGsAf8B1QHcAeAB/ywAAdUBvwGvFv8C/gH/Af4B/AH7Af8BuQGkAZUB/wHU
-        AcUBugH/AWkBTwE7Af8BwQGyAacB/xgAAccBswGmAf8BxAGxAaMB/wHBAa4BoAH/Ab4BqwGcAf8BuwGn
-        AZgB/wG4AaMBlQH/AbQBnwGQAf8BrwGaAYwB/wGrAZYBhwH/LAACOgGyAf8CsgHiAf9gAAHYAcIBshv/
-        Af4B/wHAAasBnAH/AWkBTwE7Af8BwgGzAacB/2wAApsB2QH/ZAAB2AHCAbIB/wHYAcIBsgH/AdgBwgGy
+        AcUBugH/AWoBUAE8Af8BwQGyAacB/xgAAccBswGmAf8BxAGxAaMB/wHBAa4BoAH/Ab4BqwGcAf8BuwGn
+        AZgB/wG4AaMBlQH/AbQBnwGQAf8BrwGaAYwB/wGrAZYBhwH/LAACOwGyAf8CsgHiAf9gAAHYAcIBshv/
+        Af4B/wHAAasBnAH/AWoBUAE8Af8BwgGzAacB/2wAApsB2QH/ZAAB2AHCAbIB/wHYAcIBsgH/AdgBwgGy
         Af8B2AHCAbIB/wHYAcIBsgH/AdgBwgGyAf8B1AG+Aa4B/wHPAbkBqQH/AckBswGkAf8B4gHWAc0B/xAA
         AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAHwAQcB/AX/AfABBwH8AT8C/wHA
         AQMB8AEHAfQBBwEAAQEBwAEDAfABBwHiAQcBAAEBAcABAwHwAQcBwgEHAQABAQHAAQMB8AEHAcIBEwEA
@@ -214,5 +214,8 @@
   </metadata>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="ctmTickets.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>439, 17</value>
   </metadata>
 </root>
