* Added deleting to ticket queries (closes #19)

--- a/VSTrac/TracExplorer.resx
+++ b/VSTrac/TracExplorer.resx
@@ -129,78 +129,78 @@
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABq
         EgAAAk1TRnQBSQFMAgEBBAEAAQkBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AMgABfAFjAU8B/wF5
-        AV8BSwH/AXUBXAFHAf8BcgFYAUQB/wFvAVUBQQH/AW0BUwE9Af8BawFQATsB/wFqAU8BOgH/AWoBTwE6
-        Af8kAAKSAdYB/wGMAY0B1AH/sAABgQFoAVUB/wHFAb0BtgH/AcgBqAGXAf8BxwGmAZUB/wHHAaUBlAH/
-        AcYBpAGSAf8BxgGjAZIB/wHGAaIBkAH/AWoBTwE6Af8kAAIxAa4B/wIqAawB/wJ5AckB/wLXAfAB/2AA
-        AbcBogGTAf8BagFQATwB/wFqAVABPAH/AWoBUAE8Af8BagFQATwB/wFqAVABPAH/AWoBUAE8Af8BagFQ
-        ATwB/wFqAVABPAH/AWoBUAE8Af8BagFQATwB/wFqAVABPAH/GAABgQFvAVwF/wHzAdcByQH/AfIB1QHH
-        Af8B8gHUAcUB/wE1AcwBDAH/ATUBmwEMAf8BxwGkAZQB/wFsAVIBPgH/HAACvQHmAf8EAAJqAcQB/wIq
-        AawB/wIqAawB/wIxAa4B/wJBAbQB/wJLAbgB/wKEAdAB/wwAAXwBhAGPAf8BcwGBAYUB/wFnAXQBfgH/
-        AVgBZAFtAf8BSQFTAVsB/wE4AUEBSAH/ASoBMQE3Af8BHQEjASgB/wEVARoBHwH/ARUBGgEfAf8BFQEa
-        AR8B/wEVARoBHwH/ARUBGgEfAf8BFQEaAR8B/wEVARoBHwH/DAABtwGiAZMB/wH3AeUB3AH/AbcBogGT
+        AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AMgABfQFkAVAB/wF6
+        AWABTAH/AXYBXQFIAf8BcwFZAUUB/wFwAVYBQgH/AW4BVAE+Af8BbAFRATwB/wFrAVABOwH/AWsBUAE7
+        Af8kAAKSAdYB/wGMAY0B1AH/sAABgQFpAVYB/wHFAb0BtgH/AcgBqAGXAf8BxwGmAZUB/wHHAaUBlAH/
+        AcYBpAGSAf8BxgGjAZIB/wHGAaIBkAH/AWsBUAE7Af8kAAIyAa4B/wIrAawB/wJ6AckB/wLXAfAB/2AA
+        AbcBogGTAf8BawFRAT0B/wFrAVEBPQH/AWsBUQE9Af8BawFRAT0B/wFrAVEBPQH/AWsBUQE9Af8BawFR
+        AT0B/wFrAVEBPQH/AWsBUQE9Af8BawFRAT0B/wFrAVEBPQH/GAABgQFwAV0F/wHzAdcByQH/AfIB1QHH
+        Af8B8gHUAcUB/wE2AcwBDQH/ATYBmwENAf8BxwGkAZQB/wFtAVMBPwH/HAACvQHmAf8EAAJrAcQB/wIr
+        AawB/wIrAawB/wIyAa4B/wJCAbQB/wJMAbgB/wKEAdAB/wwAAX0BhAGPAf8BdAGBAYUB/wFoAXUBfwH/
+        AVkBZQFuAf8BSgFUAVwB/wE5AUIBSQH/ASsBMgE4Af8BHgEkASkB/wEWARsBIAH/ARYBGwEgAf8BFgEb
+        ASAB/wEWARsBIAH/ARYBGwEgAf8BFgEbASAB/wEWARsBIAH/DAABtwGiAZMB/wH3AeUB3AH/AbcBogGT
         Af8BtwGiAZMB/wG3AaIBkwH/AbcBogGTAf8BtwGiAZMB/wG3AaIBkwH/AbcBogGTAf8BtwGiAZMB/wG3
-        AaIBkwH/AWoBUAE8Af8YAAGGAXQBYgX/AfQB2gHOAf8B9AHZAcwB/wHzAdcBygH/ARMB/wEMAf8BNQHM
-        AQwB/wHIAagBmAH/AXABVQFBAf8YAAJjAcEB/wIqAawB/wKBAc4B/wQAAkEBtAH/AioBrAH/AioBrAH/
-        AioBrAH/AiUBqgH/AjsBsgH/DAABfgGHAZIB/wGiAd8B8AH/AXcBzQHqAf8BUAG4AeIB/wE+Aa4B2wH/
-        ATQBqQHZAf8BLQGhAdIB/wEoAZgBxwH/AScBjgG8Af8BJQGDAa4B/wEgAYEBqwH/ARwBgQGpAf8BIgF+
-        AZ8B/wEmAXkBlgH/AR0BIwEoAf8MAAG3AaIBkwH/AfkB6QHiAf8B+AHmAd0B/wH3AeIB2AH/AfUB3gHT
-        Af8B9AHbAc4B/wHzAdcBygH/AfIB1AHFAf8B8QHQAcEB/wHwAc0BvAH/AbcBogGTAf8BagFQATwB/xgA
-        AYwBewFpBf8B9QHeAdMB/wH1Ad0B0QH/AfQB2wHPAf8B9AHaAc0B/wHzAdgBzAH/AcgBqwGbAf8BdQFa
-        AUYB/xQAAqUB3QH/AioBrAH/AioBrAH/AlQBvAH/BAACYwHBAf8CKgGsAf8CKgGsAf8CKgGsAf8CWgG+
-        Af8CtQHjAf8MAAGBAYoBlQH/AaoB6AH2Af8BlQHlAfwB/wGEAd8B+wH/AXwB1gH6Af8BcQHQAfcB/wFk
-        AcYB9AH/AVcBvgHwAf8BSAG0AewB/wE8AaoB6AH/ATIBpAHmAf8BJwGaAd8B/wEdAZAB1wH/ASIBfgGf
-        Af8BJwEuATQB/wwAAbcBogGTAf8B+QHuAegB/wH4AeoB4wH/AfgB5gHeAf8B9wHjAdkB/wH1Ad8B1QH/
-        AfUB2wHQAf8B8wHYAcsB/wHyAdUBxgH/AfEB0QHCAf8BtwGiAZMB/wFqAVABPAH/GAABkgGBAXAF/wH2
-        AeEB2AH/AfYB4AHWAf8B9QHfAdQB/wH1Ad4B0gH/AfUB3AHRAf8ByQGuAaAB/wF5AV8BSwH/FAABqwGs
-        Ad4B/wIlAaoB/wIxAa4B/wK9AeYB/wQAApsB2QH/AjEBrgH/AjEBrgH/AYwBjQHUAf8EAAKBAc4B/wGM
-        AY0B1AH/CAABgQGOAZgB/wGwAeoB9gH/AZ8B6QH7Af8BkgHkAfwB/wGBAd0B+wH/AXwB1gH6Af8BbwHO
-        AfcB/wFkAcYB9AH/AVQBvAHwAf8BSAG0AewB/wE8AaoB6AH/ATEBowHmAf8BJAGWAdwB/wEcAYEBqQH/
-        ATQBOwFCAf8MAAG3AaIBkwH/AfsB8gHtAf8B6gGaAXgB/wHqAY8BZwH/AeoBgwFWAf8B5wF/AUcB/wHe
-        AXUBPQH/AdEBbQE2Af8BwQFkATEB/wHzAdUBxwH/AbcBogGTAf8BagFQATwB/xgAAZgBgQF3Bf8B9wHl
-        AdwB/wH3AeQB2gH/AfYB4gHZAf8B9gHhAdcB/wH2AeAB1QH/AcoBsAGjAf8BfgFkAVEB/xQAAc4BzwHs
-        Af8CagHEAf8CtQHjAf8MAALJAesB/wLHAeoB/wQAApIB1gH/AioBrAH/AioBrAH/ArUB4wH/BAABgQGR
-        AZwB/wG2Ae0B+AH/AaoB7AH7Af8BmwHoAfsB/wGPAeMB/AH/AYEB3QH7Af8BeAHVAfkB/wFvAc4B9wH/
-        AWIBxQH0Af8BVAG8AfAB/wFEAbIB7AH/ATkBqQHoAf8BKwGeAeIB/wEXAYIBtAH/AUIBSgFSAf8MAAG3
+        AaIBkwH/AWsBUQE9Af8YAAGGAXUBYwX/AfQB2gHOAf8B9AHZAcwB/wHzAdcBygH/ARQB/wENAf8BNgHM
+        AQ0B/wHIAagBmAH/AXEBVgFCAf8YAAJkAcEB/wIrAawB/wKBAc4B/wQAAkIBtAH/AisBrAH/AisBrAH/
+        AisBrAH/AiYBqgH/AjwBsgH/DAABfwGHAZIB/wGiAd8B8AH/AXgBzQHqAf8BUQG4AeIB/wE/Aa4B2wH/
+        ATUBqQHZAf8BLgGhAdIB/wEpAZgBxwH/ASgBjgG8Af8BJgGDAa4B/wEhAYEBqwH/AR0BgQGpAf8BIwF/
+        AZ8B/wEnAXoBlgH/AR4BJAEpAf8MAAG3AaIBkwH/AfkB6QHiAf8B+AHmAd0B/wH3AeIB2AH/AfUB3gHT
+        Af8B9AHbAc4B/wHzAdcBygH/AfIB1AHFAf8B8QHQAcEB/wHwAc0BvAH/AbcBogGTAf8BawFRAT0B/xgA
+        AYwBfAFqBf8B9QHeAdMB/wH1Ad0B0QH/AfQB2wHPAf8B9AHaAc0B/wHzAdgBzAH/AcgBqwGbAf8BdgFb
+        AUcB/xQAAqUB3QH/AisBrAH/AisBrAH/AlUBvAH/BAACZAHBAf8CKwGsAf8CKwGsAf8CKwGsAf8CWwG+
+        Af8CtQHjAf8MAAGBAYoBlQH/AaoB6AH2Af8BlQHlAfwB/wGEAd8B+wH/AX0B1gH6Af8BcgHQAfcB/wFl
+        AcYB9AH/AVgBvgHwAf8BSQG0AewB/wE9AaoB6AH/ATMBpAHmAf8BKAGaAd8B/wEeAZAB1wH/ASMBfwGf
+        Af8BKAEvATUB/wwAAbcBogGTAf8B+QHuAegB/wH4AeoB4wH/AfgB5gHeAf8B9wHjAdkB/wH1Ad8B1QH/
+        AfUB2wHQAf8B8wHYAcsB/wHyAdUBxgH/AfEB0QHCAf8BtwGiAZMB/wFrAVEBPQH/GAABkgGBAXEF/wH2
+        AeEB2AH/AfYB4AHWAf8B9QHfAdQB/wH1Ad4B0gH/AfUB3AHRAf8ByQGuAaAB/wF6AWABTAH/FAABqwGs
+        Ad4B/wImAaoB/wIyAa4B/wK9AeYB/wQAApsB2QH/AjIBrgH/AjIBrgH/AYwBjQHUAf8EAAKBAc4B/wGM
+        AY0B1AH/CAABgQGOAZgB/wGwAeoB9gH/AZ8B6QH7Af8BkgHkAfwB/wGBAd0B+wH/AX0B1gH6Af8BcAHO
+        AfcB/wFlAcYB9AH/AVUBvAHwAf8BSQG0AewB/wE9AaoB6AH/ATIBowHmAf8BJQGWAdwB/wEdAYEBqQH/
+        ATUBPAFDAf8MAAG3AaIBkwH/AfsB8gHtAf8B6gGaAXkB/wHqAY8BaAH/AeoBgwFXAf8B5wGAAUgB/wHe
+        AXYBPgH/AdEBbgE3Af8BwQFlATIB/wHzAdUBxwH/AbcBogGTAf8BawFRAT0B/xgAAZgBgQF4Bf8B9wHl
+        AdwB/wH3AeQB2gH/AfYB4gHZAf8B9gHhAdcB/wH2AeAB1QH/AcoBsAGjAf8BfwFlAVIB/xQAAc4BzwHs
+        Af8CawHEAf8CtQHjAf8MAALJAesB/wLHAeoB/wQAApIB1gH/AisBrAH/AisBrAH/ArUB4wH/BAABgQGR
+        AZwB/wG2Ae0B+AH/AaoB7AH7Af8BmwHoAfsB/wGPAeMB/AH/AYEB3QH7Af8BeQHVAfkB/wFwAc4B9wH/
+        AWMBxQH0Af8BVQG8AfAB/wFFAbIB7AH/AToBqQHoAf8BLAGeAeIB/wEYAYIBtAH/AUMBSwFTAf8MAAG3
         AaIBkwH/AfwB9gHzAf8B+wHyAe4B/wH7Ae8B6gH/AfkB6wHmAf8B+QHoAeEB/wH3AeUB2wH/AfYB4QHX
-        Af8B9AHeAdMB/wHzAdoBzQH/AbcBogGTAf8BagFQATwB/xgAAZ4BhwF+Gf8B8wHvAewB/wGBAWoBVwH/
-        EAABcQFyAcUB/wFxAXIBxQH/BAABjAGNAdQB/wI7AbIB/wJUAbwB/wgAAt0B8gH/BAAChAHQAf8CKgGs
-        Af8CKgGsAf8CagHEAf8EAAGDAZUBnwH/Ab4B8AH5Af8BqwHwAfcB/wGlAewB+wH/AZgB5wH7Af8BiQHh
-        AfwB/wGBAd0B+wH/AXgB1QH5Af8BbAHNAfcB/wFfAcQB8wH/AVIBuwHwAf8BRAGyAewB/wEzAaQB4wH/
-        ARMBigG/Af8BUAFaAWMB/wwAAboBpQGWAf8B/QH5AfYB/wHqAZkBeQH/AeoBjwFoAf8B6gGDAVYB/wHn
-        AX8BRwH/Ad4BdgE9Af8B0gFtATYB/wHBAWQBMgH/AfUB3wHTAf8BtwGiAZMB/wFqAVABPAH/GAABpAGO
-        AYEB/wHMAboBrQH/AbcBogGTAf8BrwGaAYsB/wGnAZEBgQH/AZ8BiQGAAf8BmAGBAXcB/wGRAYEBcAH/
-        AYEBcAFdAf8QAAGrAawB3gH/AtcB8AH/AnkByQH/AioBrAH/AioBrAH/AksBuAH/BAACgQHOAf8CMQGu
-        Af8BqwGsAd4B/wLdAfIB/wIxAa4B/wIqAawB/wGrAawB3gH/BAABhgGZAaMB/wG+AfAB+QH/AbYB7QH4
-        Af8BsAHuAfoB/wGkAesB+gH/AZUB5gH7Af8BiQHhAfwB/wGBAdwB/AH/AXgB1QH5Af8BbAHNAfcB/wFf
-        AcQB8wH/AVABuQHvAf8BPAGpAecB/wETAY8BxwH/AV4BagFyAf8MAAG+AakBmgH/Af4B/AH7Af8B/QH5
+        Af8B9AHeAdMB/wHzAdoBzQH/AbcBogGTAf8BawFRAT0B/xgAAZ4BhwF/Gf8B8wHvAewB/wGBAWsBWAH/
+        EAABcgFzAcUB/wFyAXMBxQH/BAABjAGNAdQB/wI8AbIB/wJVAbwB/wgAAt0B8gH/BAAChAHQAf8CKwGs
+        Af8CKwGsAf8CawHEAf8EAAGDAZUBnwH/Ab4B8AH5Af8BqwHwAfcB/wGlAewB+wH/AZgB5wH7Af8BiQHh
+        AfwB/wGBAd0B+wH/AXkB1QH5Af8BbQHNAfcB/wFgAcQB8wH/AVMBuwHwAf8BRQGyAewB/wE0AaQB4wH/
+        ARQBigG/Af8BUQFbAWQB/wwAAboBpQGWAf8B/QH5AfYB/wHqAZkBegH/AeoBjwFpAf8B6gGDAVcB/wHn
+        AYABSAH/Ad4BdwE+Af8B0gFuATcB/wHBAWUBMwH/AfUB3wHTAf8BtwGiAZMB/wFrAVEBPQH/GAABpAGO
+        AYEB/wHMAboBrQH/AbcBogGTAf8BrwGaAYsB/wGnAZEBgQH/AZ8BiQGBAf8BmAGBAXgB/wGRAYEBcQH/
+        AYEBcQFeAf8QAAGrAawB3gH/AtcB8AH/AnoByQH/AisBrAH/AisBrAH/AkwBuAH/BAACgQHOAf8CMgGu
+        Af8BqwGsAd4B/wLdAfIB/wIyAa4B/wIrAawB/wGrAawB3gH/BAABhgGZAaMB/wG+AfAB+QH/AbYB7QH4
+        Af8BsAHuAfoB/wGkAesB+gH/AZUB5gH7Af8BiQHhAfwB/wGBAdwB/AH/AXkB1QH5Af8BbQHNAfcB/wFg
+        AcQB8wH/AVEBuQHvAf8BPQGpAecB/wEUAY8BxwH/AV8BawFzAf8MAAG+AakBmgH/Af4B/AH7Af8B/QH5
         AfgB/wH9AfcB9AH/AfwB9AHwAf8B+wHxAe0B/wH6Ae4B6AH/AfgB6gHkAf8B9wHnAd8B/wH2AeIB2gH/
-        AbcBogGTAf8BagFQATwB/xgAAakBlAGFBf8B+wHwAesB/wH6Ae8B6QH/AfoB7QHoAf8B+QHsAeYB/wH5
-        AesB5AH/Ac0BuQGuAf8BhwF2AWQB/xQAAt0B8gH/AjEBrgH/AioBrAH/AioBrAH/ArUB4wH/AuQB9QH/
-        AjEBrgH/AiUBqgH/AksBuAH/BAACpQHdAf8CpQHdAf8IAAGJAZwBpgH/Ab4B8AH5Af8BtgHtAfgB/wG2
-        Ae0B+AH/AasB8AH3Af8BogHsAfoB/wGVAeYB+wH/AYkB4QH8Af8BgQHcAfwB/wF2AdMB+gH/AWoBzAH3
-        Af8BXAHDAfMB/wFQAbkB7wH/ASABmQHPAf8BagF3AYEB/wwAAcMBrgGeAf8D/gH/AeoBmgF4Af8B6gGP
-        AWcB/wHqAYQBVgH/AeYBfwFGAf8B3wF2AT0B/wHSAW0BNwH/AcEBZAExAf8B+AHoAd8B/wG3AaIBkwH/
-        AWoBUAE8Af8YAAGwAZsBjBn/AfMB7wHsAf8BjgF9AWsB/xgAAkEBtAH/AiUBqgH/AkEBtAH/BAABqwGs
-        Ad4B/wIqAawB/wIqAawB/wIxAa4B/wQAAoQB0AH/ApsB2QH/CAABiwGgAagB/wG+AfAB+QH/Ab4B8AH5
+        AbcBogGTAf8BawFRAT0B/xgAAakBlAGFBf8B+wHwAesB/wH6Ae8B6QH/AfoB7QHoAf8B+QHsAeYB/wH5
+        AesB5AH/Ac0BuQGuAf8BhwF3AWUB/xQAAt0B8gH/AjIBrgH/AisBrAH/AisBrAH/ArUB4wH/AuQB9QH/
+        AjIBrgH/AiYBqgH/AkwBuAH/BAACpQHdAf8CpQHdAf8IAAGJAZwBpgH/Ab4B8AH5Af8BtgHtAfgB/wG2
+        Ae0B+AH/AasB8AH3Af8BogHsAfoB/wGVAeYB+wH/AYkB4QH8Af8BgQHcAfwB/wF3AdMB+gH/AWsBzAH3
+        Af8BXQHDAfMB/wFRAbkB7wH/ASEBmQHPAf8BawF4AYEB/wwAAcMBrgGeAf8D/gH/AeoBmgF5Af8B6gGP
+        AWgB/wHqAYQBVwH/AeYBgAFHAf8B3wF3AT4B/wHSAW4BOAH/AcEBZQEyAf8B+AHoAd8B/wG3AaIBkwH/
+        AWsBUQE9Af8YAAGwAZsBjBn/AfMB7wHsAf8BjgF+AWwB/xgAAkIBtAH/AiYBqgH/AkIBtAH/BAABqwGs
+        Ad4B/wIrAawB/wIrAawB/wIyAa4B/wQAAoQB0AH/ApsB2QH/CAABiwGgAagB/wG+AfAB+QH/Ab4B8AH5
         Af8BvgHwAfkB/wG+AfAB+QH/AbQB8gH4Af8BqgHsAfsB/wGgAekB+wH/AZUB5QH8Af8BigHfAfwB/wGB
-        AdgB+wH/AXsB0gH4Af8BbwHKAfQB/wFkAcAB8QH/AWoBdwGBAf8MAAHIAbIBowr/Af0B/AH/Af0B+wH5
-        Af8B/QH5AfYB/wH8AfUB8gH/AfsB8gHuAf8B+wHvAeoB/wH5AewB5gH/AbcBogGTAf8BagFQATwB/xgA
+        AdgB+wH/AXwB0gH4Af8BcAHKAfQB/wFlAcAB8QH/AWsBeAGBAf8MAAHIAbIBowr/Af0B/AH/Af0B+wH5
+        Af8B/QH5AfYB/wH8AfUB8gH/AfsB8gHuAf8B+wHvAeoB/wH5AewB5gH/AbcBogGTAf8BawFRAT0B/xgA
         AbUBoQGSAf8BzAG6Aa0B/wHEAbABogH/Ab0BqQGbAf8BtgGiAZIB/wGuAZkBigH/AaYBkQGBAf8BnwGI
-        AX8B/wGUAYEBcQH/GAABqwGsAd4B/wJqAcQB/wLJAesB/wQAAqUB3QH/AioBrAH/AioBrAH/AkEBtAH/
+        AYAB/wGUAYEBcgH/GAABqwGsAd4B/wJrAcQB/wLJAesB/wQAAqUB3QH/AisBrAH/AisBrAH/AkIBtAH/
         BAACtQHjAf8BzgHPAewB/wgAAY0BoQGqAf8BjQGhAaoB/wGNAaEBqgH/AY0BoQGqAf8BjQGhAaoB/wGL
         AZ8BqAH/AYkBnAGmAf8BiQGbAaYB/wGHAZoBpAH/AYYBmQGjAf8BhAGWAaAB/wGEAZYBoAH/AYMBlQGg
-        Af8BgwGVAaAB/wF8AYQBjwH/DAABzAG2AacF/wHqAZoBeQH/AeoBjgFnAf8B6gGDAVYB/wHmAX8BRwH/
-        Ad4BdQE9Af8B/AH2AfMB/wH7AfQB7wH/AbcBogGTAf8BtwGiAZMB/wFrAVEBPQH/GAABuwGmAZcF/wH7
-        AfIB7gH/AfkB6wHlAf8B+AHlAdwB/wH1Ad8B1AH/AfMB1wHLAf8B1QG0AaQB/wGaAYMBeQH/GAACQQG0
-        Af8C3QHyAf8MAAJqAcQB/wJLAbgB/wK9AeYB/xQAAY8BpAGsAf8BsgHkAewB/wG2Ae0B+AH/AbYB7QH4
+        Af8BgwGVAaAB/wF9AYQBjwH/DAABzAG2AacF/wHqAZoBegH/AeoBjgFoAf8B6gGDAVcB/wHmAYABSAH/
+        Ad4BdgE+Af8B/AH2AfMB/wH7AfQB7wH/AbcBogGTAf8BtwGiAZMB/wFsAVIBPgH/GAABuwGmAZcF/wH7
+        AfIB7gH/AfkB6wHlAf8B+AHlAdwB/wH1Ad8B1AH/AfMB1wHLAf8B1QG0AaQB/wGaAYMBegH/GAACQgG0
+        Af8C3QHyAf8MAAJrAcQB/wJMAbgB/wK9AeYB/xQAAY8BpAGsAf8BsgHkAewB/wG2Ae0B+AH/AbYB7QH4
         Af8BqQHsAfYB/wGSAeEB8wH/AY0BoQGqAf8B1QHcAeAB/ygAAdEBuwGrEv8B/gH9Af8B/gL7Af8B/QH5
-        AfgB/wG3AaIBkwH/AWsBUQE9Af8BawFRAT0B/wFrAVEBPQH/GAABwwGvAaIB/wP8Ff8B8wHvAewB/wGm
+        AfgB/wG3AaIBkwH/AWwBUgE+Af8BbAFSAT4B/wFsAVIBPgH/GAABwwGvAaIB/wP8Ff8B8wHvAewB/wGm
         AZABgQH/GAACvQHmAf8QAAK9AeYB/wHOAc8B7AH/GAAB2gHeAeEB/wGPAaQBrAH/AY8BpAGsAf8BjwGk
         AawB/wGPAaQBrAH/AY8BpAGsAf8B1QHcAeAB/ywAAdUBvwGvFv8C/gH/Af4B/AH7Af8BuQGkAZUB/wHU
-        AcUBugH/AWoBUAE8Af8BwQGyAacB/xgAAccBswGmAf8BxAGxAaMB/wHBAa4BoAH/Ab4BqwGcAf8BuwGn
-        AZgB/wG4AaMBlQH/AbQBnwGQAf8BrwGaAYwB/wGrAZYBhwH/LAACOwGyAf8CsgHiAf9gAAHYAcIBshv/
-        Af4B/wHAAasBnAH/AWoBUAE8Af8BwgGzAacB/2wAApsB2QH/ZAAB2AHCAbIB/wHYAcIBsgH/AdgBwgGy
+        AcUBugH/AWsBUQE9Af8BwQGyAacB/xgAAccBswGmAf8BxAGxAaMB/wHBAa4BoAH/Ab4BqwGcAf8BuwGn
+        AZgB/wG4AaMBlQH/AbQBnwGQAf8BrwGaAYwB/wGrAZYBhwH/LAACPAGyAf8CsgHiAf9gAAHYAcIBshv/
+        Af4B/wHAAasBnAH/AWsBUQE9Af8BwgGzAacB/2wAApsB2QH/ZAAB2AHCAbIB/wHYAcIBsgH/AdgBwgGy
         Af8B2AHCAbIB/wHYAcIBsgH/AdgBwgGyAf8B1AG+Aa4B/wHPAbkBqQH/AckBswGkAf8B4gHWAc0B/xAA
         AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAHwAQcB/AX/AfABBwH8AT8C/wHA
         AQMB8AEHAfQBBwEAAQEBwAEDAfABBwHiAQcBAAEBAcABAwHwAQcBwgEHAQABAQHAAQMB8AEHAcIBEwEA
@@ -217,5 +217,8 @@
   </metadata>
   <metadata name="ctmTickets.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>439, 17</value>
+  </metadata>
+  <metadata name="ctmTicket.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>544, 17</value>
   </metadata>
 </root>
