--- a/VSTrac/Properties/Resources.resx
+++ b/VSTrac/Properties/Resources.resx
@@ -193,4 +193,7 @@
   <data name="server_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\server_new.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="download_FTP_00" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download_FTP_00.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
