* Added sorting capability to Ticket View (closes #24)  * Some other minor visual enchancements (re #11)

--- a/VSTrac/TicketView.resx
+++ b/VSTrac/TicketView.resx
@@ -139,6 +139,60 @@
   <metadata name="colIcon.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="colId.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colTicketType.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colSummary.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colReporter.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colResolution.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colComponent.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colPriority.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colKeywords.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colVersion.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colMilestone.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colOwner.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colSeverity.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colDescription.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colCC.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colCreated.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colLastModified.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="colIcon.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="colIcon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -198,9 +252,6 @@
   <metadata name="colLastModified.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>333, 17</value>
-  </metadata>
   <metadata name="imgTickets.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>116, 17</value>
   </metadata>
@@ -210,44 +261,44 @@
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACc
         CwAAAk1TRnQBSQFMAgEBAwEAAQQBAAEEAQABDAEAAQwBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAEw
-        AwABDAMAAQEBAAEgBgABCYYAAS4BlQEnAf8BAAFkAQAB/0QAAYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/
+        AwABDAMAAQEBAAEgBgABCYYAASoBlQEjAf8BAAFgAQAB/0QAAYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/
         AYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BigHE
         Ad8B/wQAAYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/AYoBxAHf
         Af8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BigHEAd8B/wQAAYoBxAHfAf8BigHEAd8B/wGKAcQB3wH/
-        AYoBxAHfAf8BigHEAd8B/wEuAZUBJwH/AQABgQEAAf8BAAFkAQAB/wGKAcQB3wH/AYoBxAHfAf8BigHE
+        AYoBxAHfAf8BigHEAd8B/wEqAZUBIwH/AQABgQEAAf8BAAFgAQAB/wGKAcQB3wH/AYoBxAHfAf8BigHE
         Ad8B/zQAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5
         Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BhQH1AfkB/wGF
         AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5
-        Af8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BLgGVAScB/wEA
-        AYEBAAH/AQABZAEAAf8BAAGBAQAB/wEAAWQBAAH/AYUB9QH5Af8BigHEAd8B/wGKAcQB3wH/MAABigHE
-        Ad8B/wGFAfUB+QH/AUEBoAHLAf8BQQGgAcsB/wFBAaABywH/AUEBoAHLAf8BQQGgAcsB/wFBAaABywH/
-        AUEBoAHLAf8BhQH1AfkB/wGFAfUB+QH/BAABigHEAd8B/wGFAfUB+QH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wGFAfUB+QH/AYUB9QH5Af8EAAGKAcQB3wH/AYUB9QH5Af8BQQGgAcsB/wFBAaABywH/
-        AS4BlQEnAf8BAAFkAQAB/wFBAaABywH/AS4BlQEnAf8BAAGBAQAB/wEAAWQBAAH/AYUB9QH5Af80AAGK
+        Af8BigHEAd8B/wGKAcQB3wH/AYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BKgGVASMB/wEA
+        AYEBAAH/AQABYAEAAf8BAAGBAQAB/wEAAWABAAH/AYUB9QH5Af8BigHEAd8B/wGKAcQB3wH/MAABigHE
+        Ad8B/wGFAfUB+QH/AT0BoAHLAf8BPQGgAcsB/wE9AaABywH/AT0BoAHLAf8BPQGgAcsB/wE9AaABywH/
+        AT0BoAHLAf8BhQH1AfkB/wGFAfUB+QH/BAABigHEAd8B/wGFAfUB+QH/AwAB/wMAAf8DAAH/AwAB/wMA
+        Af8DAAH/AwAB/wGFAfUB+QH/AYUB9QH5Af8EAAGKAcQB3wH/AYUB9QH5Af8BPQGgAcsB/wE9AaABywH/
+        ASoBlQEjAf8BAAFgAQAB/wE9AaABywH/ASoBlQEjAf8BAAGBAQAB/wEAAWABAAH/AYUB9QH5Af80AAGK
         AcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5
-        Af8BhQH1AfkB/wGFAfUB+QH/AXcB5QHwAf8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGF
-        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AXcB5QHw
-        Af8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wEuAZUBJwH/AQABgQEAAf8BAAFkAQAB/wGF
-        AfUB+QH/AYUB9QH5Af8BLgGVAScB/wEAAYEBAAH/AQABZAEAAf8BigHEAd8B/zAAAYoBxAHfAf8BhQH1
-        AfkB/wFBAaABywH/AUEBoAHLAf8BQQGgAcsB/wFBAaABywH/AUEBoAHLAf8BhQH1AfkB/wGFAfUB+QH/
-        AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1AfkB/wEAAWQBAAH/AQABZAEAAf8BAAFkAQAB/wEA
-        AWQBAAH/AQABZAEAAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1
-        AfkB/wFBAaABywH/AS4BlQEnAf8BLgGVAScB/wFBAaABywH/AUEBoAHLAf8BhQH1AfkB/wGFAfUB+QH/
-        AS4BlQEnAf8BAAGBAQAB/wEAAWQBAAH/MAABigHEAd8B/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGF
-        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wF3AeUB8AH/AYoBxAHf
+        Af8BhQH1AfkB/wGFAfUB+QH/AXMB5QHwAf8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGF
+        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AXMB5QHw
+        Af8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wEqAZUBIwH/AQABgQEAAf8BAAFgAQAB/wGF
+        AfUB+QH/AYUB9QH5Af8BKgGVASMB/wEAAYEBAAH/AQABYAEAAf8BigHEAd8B/zAAAYoBxAHfAf8BhQH1
+        AfkB/wE9AaABywH/AT0BoAHLAf8BPQGgAcsB/wE9AaABywH/AT0BoAHLAf8BhQH1AfkB/wGFAfUB+QH/
+        AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1AfkB/wEAAWABAAH/AQABYAEAAf8BAAFgAQAB/wEA
+        AWABAAH/AQABYAEAAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1
+        AfkB/wE9AaABywH/ASoBlQEjAf8BKgGVASMB/wE9AaABywH/AT0BoAHLAf8BhQH1AfkB/wGFAfUB+QH/
+        ASoBlQEjAf8BAAGBAQAB/wEAAWABAAH/MAABigHEAd8B/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGF
+        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wFzAeUB8AH/AYoBxAHf
         Af8BigHEAd8B/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGF
-        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wF3AeUB8AH/AYoBxAHfAf8BigHEAd8B/wGFAfUB+QH/AYUB9QH5
-        Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wEu
-        AZUBJwH/AYoBxAHfAf8wAAGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1
+        AfUB+QH/AYUB9QH5Af8BhQH1AfkB/wFzAeUB8AH/AYoBxAHfAf8BigHEAd8B/wGFAfUB+QH/AYUB9QH5
+        Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wEq
+        AZUBIwH/AYoBxAHfAf8wAAGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1
         AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8EAAGKAcQB3wH/AYUB9QH5
         Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGF
         AfUB+QH/AYUB9QH5Af8EAAGKAcQB3wH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1
         AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af80AAGKAcQB3wH/AYUB9QH5
-        Af8BQQGgAcsB/wFBAaABywH/AUEBoAHLAf8BQQGgAcsB/wGFAfUB+QH/AUEBoAHLAf8BQQGgAcsB/wGF
-        AfUB+QH/AXcB5QHwAf8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BQQGgAcsB/wFBAaABywH/AUEBoAHL
-        Af8BQQGgAcsB/wGFAfUB+QH/AUEBoAHLAf8BQQGgAcsB/wGFAfUB+QH/AXcB5QHwAf8BigHEAd8B/wGK
-        AcQB3wH/AYUB9QH5Af8BQQGgAcsB/wFBAaABywH/AUEBoAHLAf8BQQGgAcsB/wGFAfUB+QH/AUEBoAHL
-        Af8BQQGgAcsB/wGFAfUB+QH/AXcB5QHwAf8BigHEAd8B/zAAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/
+        Af8BPQGgAcsB/wE9AaABywH/AT0BoAHLAf8BPQGgAcsB/wGFAfUB+QH/AT0BoAHLAf8BPQGgAcsB/wGF
+        AfUB+QH/AXMB5QHwAf8BigHEAd8B/wGKAcQB3wH/AYUB9QH5Af8BPQGgAcsB/wE9AaABywH/AT0BoAHL
+        Af8BPQGgAcsB/wGFAfUB+QH/AT0BoAHLAf8BPQGgAcsB/wGFAfUB+QH/AXMB5QHwAf8BigHEAd8B/wGK
+        AcQB3wH/AYUB9QH5Af8BPQGgAcsB/wE9AaABywH/AT0BoAHLAf8BPQGgAcsB/wGFAfUB+QH/AT0BoAHL
+        Af8BPQGgAcsB/wGFAfUB+QH/AXMB5QHwAf8BigHEAd8B/zAAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/
         AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1
         AfkB/wQAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5
         Af8BhQH1AfkB/wGFAfUB+QH/AYUB9QH5Af8BhQH1AfkB/wQAAYoBxAHfAf8BhQH1AfkB/wGFAfUB+QH/
